# device-api

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Procfile  README.md  manage.py  openapi-schema.json  openapi-schema.yml  pyproject.toml  requirements-heroku.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  test.yml
api/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_device_operating_system.py  0003_auto_20210107_2203.py  0004_auto_20210107_2203.py  0005_auto_20210107_2205.py  0006_auto_20210107_2209.py  0007_auto_20210107_2215.py  0008_device_device_id.py  0009_auto_20210108_1550.py  0010_auto_20210108_1732.py  0011_auto_20210109_1529.py
api/tests/: test_setup.py  test_views.py
device_api/: asgi.py  settings.py  urls.py  wsgi.py
device_api/settings/: base.py  development.py  production.py  testing.py
requirements/: base.txt  heroku.txt  testing.txt
